# itstodaymedia-contest

./: .dockerignore  .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements-prod.txt  requirements.txt
backend/app/: auth.py  config.py  database.py  main.py  rate_limit.py  seed_data.py
backend/app/models/: __init__.py  ad_platform.py  campaign.py  creative.py  insight.py  landing_page.py
backend/app/routes/: budget.py  campaigns.py  creatives.py  insights.py  landing_pages.py  mcp.py  platforms.py
backend/app/schemas/: ad_platform.py  budget.py  campaign.py  creative.py  insight.py  landing_page.py
backend/app/services/: ai_analyzer.py  anomaly_detector.py  budget_optimizer.py  mcp_manager.py  platform_sync.py
backend/migrations/: env.py
backend/migrations/versions/: 760c1fb00c8b_initial_schema.py
backend/tests/: conftest.py  test_anomaly_detector.py  test_budget.py  test_campaigns.py  test_creatives.py  test_insights.py  test_landing_pages.py  test_mcp.py  test_platform_sync.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/budget/: page.tsx
frontend/app/campaigns/: page.tsx
frontend/app/creatives/: page.tsx
frontend/app/insights/: page.tsx
frontend/app/landing-pages/: page.tsx
frontend/components/dashboard/: performance-chart.tsx  (+2 more)
frontend/lib/: api.ts  types.ts  utils.ts
mcp-servers/: base.py  google_ads.py  meta_ads.py  pyproject.toml  requirements.txt
(+8 files in other folders)
